// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedCenter renders properly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginTop": -70,
          "maxWidth": 360,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`AnimatedCenter renders properly with animation 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      animation="fadeIn"
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginTop": -70,
          "maxWidth": 360,
          "width": "100%",
        }
      }
      testID="animatedCenter"
    />
  </View>
</View>
`;
